add metas to login view

--- a/views/login.twig
+++ b/views/login.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>
 		{% if isAdminLogin %} 
 			ADMIN 
@@ -11,9 +13,6 @@
 </head>
 <body>
 <div class="container">
-	<!--
-	'isAdminLogin' => true
--->
 		<div class="login row justify-content-md-center m-0 pt-3">
 		<div class="col-lg-4 shadow p-3 mt-5 bg-body rounded">
 			<h4 class="text-center">
